--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,16 @@ services:
     ports:
       - 6379:6379
 
+  elasticsearch:
+    image: elasticsearch:7.14.1
+    environment:
+      - "discovery.type=single-node"
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ports:
+      - 127.0.0.1:9200:9200
+    volumes:
+      - ./.docker/data/elasticsearch:/usr/share/elasticsearch/data
+      
   nginx:
     image: nginx:1.12-alpine
     volumes:
